--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit
 streamlit-webrtc
 opencv-python-headless
-mediapipe
+numpy
+tensorflow-cpu  # or 'torch' depending on your model
 av
-numpy 
